apps/registry/ui-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: docker-registry-ui
  labels:
    app: registry-ui
    release: docker-registry-ui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: registry-ui
      release: docker-registry-ui
  template:
    metadata:
      labels:
        app: registry-ui
        release: docker-registry-ui
    spec:
      containers:
        - name: registry-ui
          image: "docker.io/joxit/docker-registry-ui:2.5.7"
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: http
          readinessProbe:
            httpGet:
              path: /
              port: http
