apps/registry/registry-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: docker-registry
  labels:
    app: registry
    release: docker-registry-ui
spec:
  type: ClusterIP
  ports:
    - port: 5000
      targetPort: registry
      protocol: TCP
      name: registry
  selector:
      app: registry
      release: docker-registry-ui
