apps/registry/ui-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: docker-registry-ui
  labels:
    app: registry-ui
    release: docker-registry-ui
    app/version: "2.0.0"
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
      app: registry-ui
      release: docker-registry-ui
